...
                                                <rect key="frame" x="0.0" y="0.0" width="80" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="0VF-yA-jBK"/>
                                                    <constraint firstAttribute="width" constant="80" id="qHj-QH-MIL"/>
                                                </constraints>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Premier League" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="fav-gj-PRg">
                                                <rect key="frame" x="80" y="0.0" width="334" height="50"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="28"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                                                    <constraint firstItem="WJ1-Qf-VTa" firstAttribute="centerY" secondItem="CdP-3c-b8G" secondAttribute="centerY" id="cAb-ID-XO7"/>
                                                </constraints>
                                            </view>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="mg5-j3-dZD">
                                                <rect key="frame" x="0.0" y="177.5" width="382" height="90.5"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dQ4-lz-ELu">
                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="32.5"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yZy-si-hlo">
                                                        <rect key="frame" x="0.0" y="57.5" width="382" height="33"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                    </textField>
                                                </subviews>
                                            </stackView>
...
                                                <rect key="frame" x="0.0" y="308" width="382" height="71"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kyQ-Cl-gdW">
                                                        <rect key="frame" x="0.0" y="0.0" width="310.5" height="71"/>
                                                        <color key="backgroundColor" systemColor="labelColor"/>
                                                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="LOGIN">
                                                            <backgroundConfiguration key="background" cornerRadius="20"/>
                                                            <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                                        </buttonConfiguration>
                                                        <connections>
                                                            <action selector="loginButtonClicked:" destination="qhA-Cu-5ML" eventType="touchUpInside" id="3L9-sm-oih"/>
                                                        </connections>
...
